[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kafka-broker"
version = "0.4.7"
authors = [
  { name="Tijmen Simons", email="tijmen.simons@gmail.com" },
  { name="Ivar Stek", email="ivarstek@hotmail.nl" },
]
description = "A python package implementation for the confluent kafka package. Managing producing and consuming."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "confluent_kafka>=2.3.0",
  "pymemcache>=4.0.0",
  "pydantic>=2.5.3"
] 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TijmenSimons/kafka-broker"
"Bug Tracker" = "https://github.com/TijmenSimons/kafka-broker/issues"
